# lyric-video-studio

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  main.py  pyproject.toml
backend/app/: activity.py  config.py  database.py  deps.py  main.py
backend/app/models/: db_models.py  schemas.py
backend/app/routers/: auth.py  project.py  upload.py  video.py
backend/app/services/: video_generator.py
frontend/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChangePasswordModal.tsx  ComboCounter.tsx  FileUpload.tsx  Generate.tsx  HitEffect.tsx  ImageCropper.tsx  InviteModal.tsx  LyricSync.tsx  Preview.tsx  ProtectedRoute.tsx  ScreenFlash.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useAudioPlayer.ts
frontend/src/pages/: LoginPage.tsx  RegisterPage.tsx
frontend/src/types/: index.ts
frontend/src/utils/: api.ts  canvasRenderer.ts  colorUtils.ts  parseSingerTags.ts  singerColors.ts
